Update dependencies in package.json files

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "format": "prettier --write .",
     "codegen": "graphql-codegen --config codegen.ts",
     "codegen:watch": "graphql-codegen --watch './graphql/schema.graphql' --watch './codegen.ts'",
-    "update": "pnpm update -rLf && pnpm sst update && pnpm install -rf"
+    "update": "concurrently --names \"Dependency Update, Chromium Layer Update, Argon Layer Update\" -c \"bgYellow,bgBlue,bgPink\" \"pnpm update -rLf && pnpm sst update && pnpm install -rf\" \"cd lambda-layers/chromium && ./build-layer.sh\" \"cd lambda-layers/argon2 && ./build-layer.sh\""
   },
   "devDependencies": {
-    "@0no-co/graphqlsp": "^1.7.1",
+    "@0no-co/graphqlsp": "^1.9.1",
     "@eslint/eslintrc": "^3.0.2",
     "@eslint/js": "^8.57.0",
     "@graphql-codegen/cli": "5.0.2",
@@ -30,7 +30,7 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/cfn-response": "^1.0.8",
     "@types/in-app-purchase": "^1.11.4",
-    "@types/node": "^20.12.3",
+    "@types/node": "^20.12.4",
     "@types/pg": "^8.11.4",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
@@ -45,23 +45,23 @@
     "prettier-plugin-svelte": "^3.2.2",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "sst": "2.41.4",
-    "typescript": "^5.4.3",
+    "typescript": "^5.4.4",
     "typescript-eslint": "^7.5.0"
   },
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.540.0",
-    "@aws-sdk/client-s3": "^3.540.0",
-    "@aws-sdk/client-sqs": "^3.547.0",
-    "@aws-sdk/credential-providers": "^3.540.0",
-    "@aws-sdk/s3-request-presigner": "^3.540.0",
-    "@langchain/anthropic": "^0.1.9",
+    "@aws-sdk/client-bedrock-runtime": "^3.549.0",
+    "@aws-sdk/client-s3": "^3.549.0",
+    "@aws-sdk/client-sqs": "^3.549.0",
+    "@aws-sdk/credential-providers": "^3.549.0",
+    "@aws-sdk/s3-request-presigner": "^3.549.0",
+    "@langchain/anthropic": "^0.1.10",
     "@langchain/community": "^0.0.44",
-    "@langchain/openai": "^0.0.25",
+    "@langchain/openai": "^0.0.26",
     "@neondatabase/serverless": "^0.9.0",
-    "drizzle-orm": "^0.30.6",
+    "drizzle-orm": "^0.30.7",
     "drizzle-zod": "^0.5.1",
-    "gql.tada": "^1.4.1",
-    "langchain": "^0.1.30",
+    "gql.tada": "^1.4.3",
+    "langchain": "^0.1.31",
     "neon-sdk": "^1.18.0",
     "pg": "^8.11.5",
     "pgvector": "^0.1.8",
