Update pnpm install command in tasks.json

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
       "type": "shell",
       "label": "pnpm-install",
       "detail": "Install packages",
-      "command": "pnpm install -rf",
+      "command": "pnpm install -r",
       "problemMatcher": []
     },
   ]
