--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@langchain/community": "^0.0.44",
     "@langchain/openai": "^0.0.26",
     "@neondatabase/serverless": "^0.9.0",
+    "@upstash/vector": "^1.0.5",
     "drizzle-orm": "^0.30.7",
     "drizzle-zod": "^0.5.1",
     "gql.tada": "^1.4.3",
