--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,8 @@
       "name": "Backend Dev",
       "type": "node",
       "request": "launch",
-      "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/sst",
-      "runtimeArgs": ["dev"],
+      "runtimeExecutable": "pnpm",
+      "runtimeArgs": ["run", "dev"],
       "console": "integratedTerminal",
       "skipFiles": ["<node_internals>/**"],
       "preLaunchTask": "pnpm-install"
@@ -19,6 +19,7 @@
       "runtimeArgs": ["run", "dev:sst"],
       "console": "integratedTerminal",
       "cwd": "${workspaceFolder}/packages/website",
+      "skipFiles": ["<node_internals>/**"],
       "preLaunchTask": "pnpm-install"
     },
     {
@@ -29,6 +30,7 @@
       "runtimeArgs": ["run", "dev:sst"],
       "console": "integratedTerminal",
       "cwd": "${workspaceFolder}/packages/auth-ui",
+      "skipFiles": ["<node_internals>/**"],
       "preLaunchTask": "pnpm-install"
     },
   ]
