--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -36,6 +36,7 @@
     "svelte-copy": "^1.4.1",
     "svelte-intersection-observer": "^1.0.0",
     "svelte-kit-sst": "2.41.4",
+    "svelte-loading-spinners": "^0.3.6",
     "svelte-share-buttons-component": "^3.0.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.3",
@@ -61,7 +62,9 @@
     "graphql-request": "^6.1.0",
     "lucide-svelte": "^0.365.0",
     "marked": "^12.0.1",
+    "mode-watcher": "^0.3.0",
     "stripe": "^14.24.0",
+    "svelte-sonner": "^0.3.21",
     "tailwind-variants": "^0.2.1",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
