refactor: Update UI components, theme colors, and error handling in chat functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,14 @@
     "unfocus",
     "upstash"
   ],
+  "eslint.workingDirectories": [
+    "packages/core",
+    "packages/client",
+    "packages/server",
+    "apps/website",
+    "apps/functions",
+    "apps/auth-ui"
+  ],
   "eslint.lintTask.enable": true,
   "eslint.experimental.useFlatConfig": true,
   "eslint.validate": [
