--- a/packages/tsconfig/tsconfig.json
+++ b/packages/tsconfig/tsconfig.json
@@ -109,7 +109,14 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true /* Skip type checking all .d.ts files. */,
+    "plugins": [
+      {
+        "name": "@0no-co/graphqlsp",
+        "schema": "../../graphql/schema.graphql",
+        "tadaOutputLocation": "../../graphql/introspection.d.ts"
+      }
+    ]
   },
   "exclude": ["node_modules", "dist"]
 }
