--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "console": "sst console",
     "typecheck": "tsc --noEmit",
     "typecheck:all": "pnpm run typecheck && pnpm run -r --parallel typecheck",
-    "lint": "pnpm run -r --parallel lint",
-    "format": "pnpm run -r --parallel format",
+    "lint": "eslint .",
+    "lint:all": "pnpm run lint && pnpm run -r --parallel lint",
+    "format": "prettier --write .",
+    "format:all": "pnpm run format && pnpm run -r --parallel format",
     "codegen": "graphql-codegen --config codegen.ts",
     "codegen:watch": "graphql-codegen --watch './graphql/schema.graphql' --watch './codegen.ts'",
-    "update": "concurrently --names \"Dependency Update, Chromium Layer Update, Argon Layer Update\" -c \"bgYellow,bgBlue,bgPink\" \"pnpm update -rLf && pnpm sst update && pnpm install -rf\" \"cd lambda-layers/chromium && ./build-layer.sh\" \"cd lambda-layers/argon2 && ./build-layer.sh\""
+    "update": "concurrently --names \"Dependency Update,Chromium Layer Update,Argon Layer Update\" -c \"bgYellow,bgBlue,bgPink\" \"pnpm update -rLf && pnpm sst update && pnpm install -rf\" \"cd lambda-layers/chromium && ./build-layer.sh\" \"cd lambda-layers/argon2 && ./build-layer.sh\""
   },
   "devDependencies": {
-    "@0no-co/graphqlsp": "^1.12.3",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/client-preset": "^4.2.6",
     "@graphql-codegen/introspection": "4.0.3",
@@ -26,12 +27,12 @@
     "@graphql-codegen/typescript-resolvers": "4.1.0",
     "@types/node": "^20.12.12",
     "@types/pg": "^8.11.6",
-    "aws-cdk-lib": "2.132.1",
+    "aws-cdk-lib": "2.142.1",
     "concurrently": "^8.2.2",
     "constructs": "10.3.0",
     "drizzle-kit": "0.21.2",
     "graphql": "^16.8.1",
-    "sst": "2.41.5",
+    "sst": "2.42.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
@@ -40,9 +41,9 @@
     "@aws-sdk/client-sqs": "^3.577.0",
     "@aws-sdk/credential-providers": "^3.577.0",
     "@aws-sdk/s3-request-presigner": "^3.577.0",
-    "@langchain/anthropic": "^0.1.20",
+    "@langchain/anthropic": "^0.1.21",
     "@langchain/community": "^0.2.0",
-    "@langchain/openai": "^0.0.32",
+    "@langchain/openai": "^0.0.33",
     "@neondatabase/serverless": "^0.9.3",
     "@upstash/vector": "^1.1.1",
     "drizzle-orm": "^0.30.10",
