--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@revelationsai/core",
+  "name": "@revelationsai/infra",
   "version": "1.0.0",
+  "description": "The Infrastructure as Code for Revelations AI",
+  "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "test": "sst bind vitest",
     "typecheck": "tsc -noEmit",
     "lint": "eslint .",
     "format": "prettier --write ."
@@ -12,14 +13,9 @@
     "@revelationsai/eslint-config": "workspace:*",
     "@revelationsai/prettier-config": "workspace:*",
     "@revelationsai/tsconfig": "workspace:*",
-    "@types/node": "^20.12.12",
-    "@types/validator": "^13.11.10",
-    "sst": "2.42.0",
-    "vitest": "^1.6.0"
+    "sst": "^2.42.0"
   },
   "dependencies": {
-    "ai": "^3.1.12",
-    "axios": "^1.7.0",
-    "axios-retry": "^4.2.0"
+    "@revelationsai/core": "workspace:*"
   }
 }
