Refactor code structure, remove unused files, and update UI components, theme colors, and error handling in chat functionality

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "extends": "@revelationsai/tsconfig",
   "compilerOptions": {
-    "lib": ["ESNext", "ESNext.AsyncIterable", "DOM", "DOM.Iterable"],
     "paths": {
-      "@core/*": ["../../packages/core/src/*"],
-      "@core": ["../../packages/core/src"],
-      "@langchain/*": ["../../packages/langchain/src/*"],
-      "@langchain": ["../../packages/langchain/src"],
-      "@api/*": ["./src/*"],
-      "@api": ["./src"]
+      "@revelationsai/core/*": ["../../packages/core/src/*"],
+      "@revelationsai/core": ["../../packages/core/src"],
+      "@revelationsai/langchain/*": ["../../packages/langchain/src/*"],
+      "@revelationsai/langchain": ["../../packages/langchain/src"],
+      "@revelationsai/server/*": ["../../packages/server/src/*"],
+      "@revelationsai/server": ["../../packages/server/src"],
+      "@revelationsai/api/*": ["./src/*"],
+      "@revelationsai/api": ["./src"]
     }
   },
   "include": ["./src/**/*.ts", "../../packages/core/globals.d.ts"]
