--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,16 +1,13 @@
 {
   "extends": "@revelationsai/tsconfig",
   "compilerOptions": {
-    "lib": ["ESNext", "ESNext.AsyncIterable", "DOM", "DOM.Iterable"],
     "paths": {
       "@revelationsai/core/*": ["../core/src/*"],
       "@revelationsai/core": ["../core/src"],
       "@revelationsai/langchain/*": ["../langchain/src/*"],
       "@revelationsai/langchain": ["../langchain/src"],
       "@revelationsai/server/*": ["./src/*"],
-      "@revelationsai/server": ["./src"],
-      "@lib/database": ["./src/lib/database"],
-      "@lib/cache": ["./src/lib/cache"]
+      "@revelationsai/server": ["./src"]
     }
   },
   "include": ["./src/**/*.ts", "../core/globals.d.ts"],
