--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,7 +22,7 @@
     "@neondatabase/serverless": "^0.9.3",
     "@revelationsai/core": "workspace:*",
     "@revelationsai/langchain": "workspace:*",
-    "@upstash/qstash": "^2.5.0",
+    "@revelationsai/server": "workspace:*",
     "@upstash/ratelimit": "^1.1.3",
     "@upstash/redis": "^1.30.1",
     "@xmldom/xmldom": "^0.8.10",
@@ -35,7 +35,6 @@
     "jszip": "^3.10.1",
     "pg": "^8.11.5",
     "stripe": "^15.5.0",
-    "svix": "^1.24.0",
     "ws": "^8.17.0",
     "zod": "^3.23.8"
   },
