--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -47,6 +47,7 @@
     "pug": "^3.0.2",
     "puppeteer-core": "^22.6.3",
     "stripe": "^14.24.0",
+    "svix": "^1.24.0",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
     "web-streams-polyfill": "^4.0.0",
