Fixing linter config

--- a/packages/eslint-config/tsconfig.json
+++ b/packages/eslint-config/tsconfig.json
@@ -1,3 +1,9 @@
 {
-  "extends": "@theaistudybible/tsconfig"
+  "extends": "@theaistudybible/tsconfig",
+  "compilerOptions": {
+    "allowJs": true,
+    "strict": false
+  },
+  "include": ["./eslint.config.js"],
+  "exclude": ["node_modules"]
 }
