--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,9 +37,9 @@
     "packages/core",
     "packages/client",
     "packages/server",
+    "apps/api",
     "apps/website",
-    "apps/functions",
-    "apps/auth-ui"
+    "apps/functions"
   ],
   "eslint.lintTask.enable": true,
   "eslint.experimental.useFlatConfig": true,
