--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -17,14 +17,16 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@theaistudybible/eslint-config": "workspace:*",
-    "@theaistudybible/prettier-config": "workspace:*",
-    "@theaistudybible/tsconfig": "workspace:*",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@tanstack/eslint-plugin-query": "^5.35.6",
+    "@theaistudybible/eslint-config": "workspace:*",
+    "@theaistudybible/prettier-config": "workspace:*",
+    "@theaistudybible/tsconfig": "workspace:*",
     "autoprefixer": "^10.4.16",
+    "eslint-plugin-svelte": "^2.39.0",
     "postcss": "^8.4.33",
     "svelte": "^5.0.0-next.1",
     "svelte-check": "^3.6.0",
@@ -36,10 +38,10 @@
     "vitest": "^1.2.0"
   },
   "dependencies": {
+    "@tanstack/svelte-query": "^5.37.1",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/langchain": "workspace:*",
     "@theaistudybible/server": "workspace:*",
-    "@tanstack/svelte-query": "^5.37.1",
     "bits-ui": "^0.21.9",
     "clerk-sveltekit": "^0.4.2",
     "clsx": "^2.1.1",
