--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -6,12 +6,14 @@
   "main": "eslint.config.js",
   "type": "module",
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.3.0",
     "@theaistudybible/tsconfig": "workspace:*",
+    "@types/eslint__eslintrc": "^2.1.1",
     "@types/eslint__js": "^8.42.3",
     "eslint": "^9.3.0",
+    "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-svelte": "^2.39.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.10.0"
   }
