Refactor code structure, remove unused files, and update UI components, theme colors, and error handling in chat functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,8 +35,9 @@
   ],
   "eslint.workingDirectories": [
     "packages/core",
-    "packages/client",
+    "packages/langchain",
     "packages/server",
+    "packages/infra",
     "apps/api",
     "apps/website",
     "apps/functions"
