--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -14,6 +14,7 @@
     "typecheck:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "test": "vitest",
     "lint": "prettier --check . && eslint .",
+    "lint:fix": "prettier --write . && eslint . --fix",
     "format": "prettier --write ."
   },
   "devDependencies": {
