--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -14,6 +14,7 @@
     "eslint": "^9.3.0",
     "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-sonarjs": "^1.0.3",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.10.0"
   }
