--- a/packages/langchain/package.json
+++ b/packages/langchain/package.json
@@ -7,6 +7,7 @@
     "test": "sst bind vitest",
     "typecheck": "tsc -noEmit",
     "lint": "eslint .",
+    "lint:fix": "prettier --write . && eslint . --fix",
     "format": "prettier --write ."
   },
   "devDependencies": {
