--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -27,7 +27,9 @@
     "@theaistudybible/prettier-config": "workspace:*",
     "@theaistudybible/tsconfig": "workspace:*",
     "autoprefixer": "^10.4.16",
+    "eslint": "^9.3.0",
     "eslint-plugin-svelte": "^2.39.0",
+    "eslint-plugin-tailwindcss": "^3.16.0",
     "postcss": "^8.4.33",
     "svelte": "^5.0.0-next.1",
     "svelte-check": "^3.6.0",
