Refactor code structure, remove unused files, and update UI components, theme colors, and error handling in chat functionality

--- a/apps/functions/tsconfig.json
+++ b/apps/functions/tsconfig.json
@@ -6,12 +6,14 @@
       "@theaistudybible/core/*": ["../../packages/core/src/*"],
       "@theaistudybible/langchain": ["../../packages/langchain/src"],
       "@theaistudybible/langchain/*": ["../../packages/langchain/src/*"],
-      "@theaistudybible/server": ["../../packages/server/src"],
-      "@theaistudybible/server/*": ["../../packages/server/src/*"],
       "@theaistudybible/functions": ["./src"],
       "@theaistudybible/functions/*": ["./src/*"]
     }
   },
-  "include": ["./src/**/*.ts", "../../packages/core/globals.d.ts"],
+  "include": [
+    "./src/**/*.ts",
+    "../../packages/core/globals.d.ts",
+    "../../packages/server/src/lib/chat.ts"
+  ],
   "exclude": ["node_modules"]
 }
