--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -12,7 +12,8 @@
     "preview:sst": "sst bind vite preview",
     "typecheck": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "typecheck:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "test": "vitest",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
     "lint": "prettier --check . && eslint .",
     "lint:fix": "prettier --write . && eslint . --fix",
     "format": "prettier --write ."
@@ -26,6 +27,7 @@
     "@theaistudybible/eslint-config": "workspace:*",
     "@theaistudybible/prettier-config": "workspace:*",
     "@theaistudybible/tsconfig": "workspace:*",
+    "@vite-pwa/sveltekit": "^0.5.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^9.3.0",
     "eslint-plugin-svelte": "^2.39.0",
@@ -38,18 +40,40 @@
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^5.0.3",
-    "vitest": "^1.2.0"
+    "vitest": "^1.2.0",
+    "@types/pg": "^8.11.6",
+    "@types/ws": "^8.5.10"
   },
   "dependencies": {
     "@tanstack/svelte-query": "^5.37.1",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/langchain": "workspace:*",
-    "@theaistudybible/server": "workspace:*",
     "bits-ui": "^0.21.9",
     "clerk-sveltekit": "^0.4.2",
     "clsx": "^2.1.1",
     "hono": "^4.3.9",
     "tailwind-merge": "^2.3.0",
-    "tailwind-variants": "^0.2.1"
+    "tailwind-variants": "^0.2.1",
+    "@ai-sdk/anthropic": "^0.0.14",
+    "@ai-sdk/openai": "^0.0.13",
+    "@aws-sdk/client-sqs": "^3.577.0",
+    "@clerk/backend": "^1.2.0",
+    "@hono/clerk-auth": "^2.0.0",
+    "@hono/sentry": "^1.1.0",
+    "@hono/zod-validator": "^0.2.1",
+    "@neondatabase/serverless": "^0.9.3",
+    "@upstash/ratelimit": "^1.1.3",
+    "@upstash/redis": "^1.31.1",
+    "@xmldom/xmldom": "^0.8.10",
+    "ai": "^3.1.12",
+    "dayjs": "^1.11.11",
+    "drizzle-orm": "^0.30.10",
+    "drizzle-zod": "^0.5.1",
+    "fast-xml-parser": "^4.4.0",
+    "jszip": "^3.10.1",
+    "pg": "^8.11.5",
+    "stripe": "^15.7.0",
+    "ws": "^8.17.0",
+    "zod": "^3.23.8"
   }
 }
