Revert "Refactor code structure, remove unused files, and update UI components, theme colors, and error handling in chat functionality"
This reverts commit f7958396eb50d623c0f9b7c92ab1f587cde31a34.

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -8,10 +8,9 @@
       "@theaistudybible/langchain/*": ["../../packages/langchain/src/*"],
       "@theaistudybible/server": ["../../packages/server/src"],
       "@theaistudybible/server/*": ["../../packages/server/src/*"],
-      "@theaistudybible/functions": ["./src"],
-      "@theaistudybible/functions/*": ["./src/*"]
+      "@theaistudybible/api": ["./src"],
+      "@theaistudybible/api/*": ["./src/*"]
     }
   },
-  "include": ["./src/**/*.ts", "../../packages/core/globals.d.ts"],
-  "exclude": ["node_modules"]
+  "include": ["./src/**/*.ts", "../../packages/core/globals.d.ts"]
 }
