--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@theaistudybible/functions",
+  "name": "@theaistudybible/server",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -22,16 +22,8 @@
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@clerk/clerk-sdk-node": "^5.0.8",
-    "@clerk/types": "^4.5.0",
-    "@keyv/redis": "^2.8.5",
-    "@middy/core": "^5.3.5",
-    "@middy/http-cors": "^5.3.5",
-    "@middy/http-error-handler": "^5.3.5",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/langchain": "workspace:*",
-    "@theaistudybible/server": "workspace:*",
-    "@upstash/ratelimit": "^1.1.3",
     "@upstash/redis": "^1.31.1",
     "ai": "^3.1.12",
     "argon2": "^0.40.1",
@@ -39,18 +31,13 @@
     "escape-string-regexp": "^5.0.0",
     "fast-xml-parser": "^4.4.0",
     "firebase-admin": "^12.1.1",
-    "graphql": "^16.8.1",
-    "graphql-tools": "^9.0.1",
-    "keyv": "^4.5.4",
     "lambda-stream": "^0.5.0",
     "mammoth": "^1.7.2",
-    "nodemailer": "^6.9.13",
     "openai": "^4.47.1",
     "pdf-parse": "^1.1.1",
     "pug": "^3.0.2",
     "puppeteer-core": "^22.9.0",
     "stripe": "^15.7.0",
-    "svix": "^1.24.0",
     "uuid": "^9.0.1",
     "validator": "^13.12.0",
     "web-streams-polyfill": "^4.0.0",
