Refactor code structure, remove unused files, and update UI components, theme colors, and error handling in chat functionality

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ REVENUECAT_STRIPE_API_KEY=
 # Email Auth
 EMAIL_SERVER_HOST=smtp.forwardemail.net
 EMAIL_SERVER_PORT=587
-EMAIL_SERVER_USERNAME=postmaster@revelationsai.com
+EMAIL_SERVER_USERNAME=postmaster@theaistudybible.com
 EMAIL_SERVER_PASSWORD=
 
 # Admin User
@@ -39,3 +39,6 @@ STRIPE_WEBHOOK_SECRET=
 # Upstash
 UPSTASH_EMAIL=
 UPSTASH_API_KEY=
+
+# Sentry
+SENTRY_AUTH_TOKEN=
