--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,22 +10,22 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "@sparticuz/chromium": "^123.0.1",
     "@theaistudybible/eslint-config": "workspace:*",
     "@theaistudybible/prettier-config": "workspace:*",
     "@theaistudybible/tsconfig": "workspace:*",
-    "@sparticuz/chromium": "^123.0.1",
     "@types/aws-lambda": "^8.10.138",
     "@types/busboy": "^1.5.4",
     "@types/node": "^20.12.12",
     "@types/nodemailer": "^6.4.15",
-    "sst": "2.42.0",
+    "sst": "ion",
     "vitest": "^1.6.0"
   },
   "dependencies": {
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/langchain": "workspace:*",
-    "@upstash/redis": "^1.31.1",
-    "ai": "^3.1.12",
+    "@upstash/redis": "^1.31.2",
+    "ai": "^3.1.13",
     "argon2": "^0.40.1",
     "busboy": "^1.6.0",
     "escape-string-regexp": "^5.0.0",
