--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -18,23 +18,24 @@
     "@types/busboy": "^1.5.4",
     "@types/node": "^20.12.12",
     "@types/nodemailer": "^6.4.15",
-    "sst": "2.42.0",
+    "sst": "ion",
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@clerk/clerk-sdk-node": "^5.0.8",
+    "@clerk/clerk-sdk-node": "^5.0.9",
     "@clerk/types": "^4.5.0",
     "@keyv/redis": "^2.8.5",
     "@middy/core": "^5.3.5",
     "@middy/http-cors": "^5.3.5",
     "@middy/http-error-handler": "^5.3.5",
+    "@opentelemetry/instrumentation": "^0.51.1",
     "@sentry/aws-serverless": "^8.4.0",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/langchain": "workspace:*",
     "@theaistudybible/server": "workspace:*",
     "@upstash/ratelimit": "^1.1.3",
-    "@upstash/redis": "^1.31.1",
-    "ai": "^3.1.12",
+    "@upstash/redis": "^1.31.2",
+    "ai": "^3.1.13",
     "argon2": "^0.40.1",
     "busboy": "^1.6.0",
     "escape-string-regexp": "^5.0.0",
