--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -18,60 +18,61 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@tailwindcss/typography": "^0.5.10",
+    "@sveltejs/adapter-auto": "^3.2.1",
+    "@sveltejs/kit": "^2.5.10",
+    "@sveltejs/vite-plugin-svelte": "^3.1.0",
+    "@tailwindcss/typography": "^0.5.13",
     "@tanstack/eslint-plugin-query": "^5.35.6",
     "@theaistudybible/eslint-config": "workspace:*",
     "@theaistudybible/prettier-config": "workspace:*",
     "@theaistudybible/tsconfig": "workspace:*",
-    "autoprefixer": "^10.4.16",
+    "@types/pg": "^8.11.6",
+    "@types/ws": "^8.5.10",
+    "autoprefixer": "^10.4.19",
     "eslint": "^9.3.0",
     "eslint-plugin-svelte": "^2.39.0",
-    "eslint-plugin-tailwindcss": "^3.16.0",
-    "postcss": "^8.4.33",
-    "svelte": "^5.0.0-next.1",
-    "svelte-check": "^3.6.0",
+    "eslint-plugin-tailwindcss": "^3.17.0",
+    "postcss": "^8.4.38",
+    "svelte": "5.0.0-next.140",
+    "svelte-check": "^3.7.1",
     "svelte-kit-sst": "2.42.0",
-    "tailwindcss": "^3.4.1",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.3",
-    "vitest": "^1.2.0",
-    "@types/pg": "^8.11.6",
-    "@types/ws": "^8.5.10"
+    "tailwindcss": "^3.4.3",
+    "tslib": "^2.6.2",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11",
+    "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@tanstack/svelte-query": "^5.37.1",
-    "@theaistudybible/core": "workspace:*",
-    "@theaistudybible/langchain": "workspace:*",
-    "@theaistudybible/server": "workspace:*",
-    "bits-ui": "^0.21.9",
-    "clerk-sveltekit": "^0.4.2",
-    "clsx": "^2.1.1",
-    "hono": "^4.3.9",
-    "tailwind-merge": "^2.3.0",
-    "tailwind-variants": "^0.2.1",
-    "@ai-sdk/anthropic": "^0.0.14",
-    "@ai-sdk/openai": "^0.0.13",
-    "@aws-sdk/client-sqs": "^3.577.0",
-    "@clerk/backend": "^1.2.0",
+    "@ai-sdk/anthropic": "^0.0.15",
+    "@ai-sdk/openai": "^0.0.14",
+    "@aws-sdk/client-sqs": "^3.582.0",
+    "@clerk/backend": "^1.2.1",
     "@hono/clerk-auth": "^2.0.0",
     "@hono/sentry": "^1.1.0",
     "@hono/zod-validator": "^0.2.1",
     "@neondatabase/serverless": "^0.9.3",
+    "@sentry/sveltekit": "^8.4.0",
+    "@tanstack/svelte-query": "^5.37.1",
+    "@theaistudybible/core": "workspace:*",
+    "@theaistudybible/langchain": "workspace:*",
+    "@theaistudybible/server": "workspace:*",
     "@upstash/ratelimit": "^1.1.3",
-    "@upstash/redis": "^1.31.1",
+    "@upstash/redis": "^1.31.2",
     "@xmldom/xmldom": "^0.8.10",
-    "ai": "^3.1.12",
+    "ai": "^3.1.13",
+    "bits-ui": "^0.21.9",
+    "clerk-sveltekit": "^0.4.2",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "drizzle-orm": "^0.30.10",
     "drizzle-zod": "^0.5.1",
     "fast-xml-parser": "^4.4.0",
+    "hono": "^4.3.10",
     "jszip": "^3.10.1",
     "pg": "^8.11.5",
     "stripe": "^15.7.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwind-variants": "^0.2.1",
     "ws": "^8.17.0",
     "zod": "^3.23.8"
   }
