--- a/package.json
+++ b/package.json
@@ -4,44 +4,41 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "sst dev",
     "build": "sst build",
-    "deploy": "sst deploy",
-    "remove": "sst remove",
     "console": "sst console",
-    "typecheck": "tsc --noEmit",
-    "typecheck:all": "pnpm run typecheck && pnpm run -r --parallel typecheck",
+    "deploy": "sst deploy",
+    "dev": "sst dev",
+    "format": "pnpm run -r --parallel format",
     "lint": "pnpm run -r --parallel lint",
     "lint:fix": "pnpm run -r --parallel lint:fix",
-    "format": "pnpm run -r --parallel format",
-    "update": "concurrently --names \"Dependency Update,Chromium Layer Update\" -c \"bgYellow,bgBlue\" \"pnpm update -rLf && pnpm sst update && pnpm install -rf\" \"cd lambda-layers/chromium && ./build-layer.sh\" "
+    "remove": "sst remove",
+    "typecheck": "tsc --noEmit",
+    "typecheck:all": "pnpm run typecheck \u0026\u0026 pnpm run -r --parallel typecheck",
+    "update": "concurrently --names \"Dependency Update,Chromium Layer Update\" -c \"bgYellow,bgBlue\" \"pnpm update -rLf \u0026\u0026 pnpm sst update \u0026\u0026 pnpm install -rf\" \"cd lambda-layers/chromium \u0026\u0026 ./build-layer.sh\" "
   },
   "devDependencies": {
+    "@types/aws-lambda": "8.10.138",
     "@types/node": "^20.12.12",
     "@types/pg": "^8.11.6",
-    "aws-cdk-lib": "2.142.1",
     "concurrently": "^8.2.2",
-    "constructs": "10.3.0",
-    "drizzle-kit": "0.21.3",
+    "drizzle-kit": "0.21.4",
     "graphql": "^16.8.1",
-    "sst": "2.42.0",
     "typescript": "^5.4.5",
-    "vitest": "^1.6.0",
-    "vite-tsconfig-paths": "^4.3.2"
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.577.0",
-    "@aws-sdk/client-s3": "^3.577.0",
-    "@aws-sdk/client-sqs": "^3.577.0",
-    "@aws-sdk/credential-providers": "^3.577.0",
-    "@aws-sdk/s3-request-presigner": "^3.577.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.582.0",
+    "@aws-sdk/client-s3": "^3.582.0",
+    "@aws-sdk/client-sqs": "^3.582.0",
+    "@aws-sdk/credential-providers": "^3.582.0",
+    "@aws-sdk/s3-request-presigner": "^3.582.0",
     "@neondatabase/serverless": "^0.9.3",
     "@upstash/vector": "^1.1.1",
     "drizzle-orm": "^0.30.10",
     "drizzle-zod": "^0.5.1",
-    "gql.tada": "^1.7.5",
-    "neon-sdk": "^1.21.0",
     "pg": "^8.11.5",
+    "sst": "ion",
     "zod": "^3.23.8"
   },
   "workspaces": [
