--- a/apps/scripts/package.json
+++ b/apps/scripts/package.json
@@ -5,13 +5,19 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
+    "typecheck": "tsc --noEmit",
+    "lint": "prettier --check . && eslint .",
+    "lint:fix": "prettier --write . && eslint .",
+    "format": "prettier --write .",
+    "test": "vitest run",
     "scripts": "sst shell tsx index.ts"
   },
   "devDependencies": {
     "@theaistudybible/eslint-config": "workspace:*",
     "@theaistudybible/prettier-config": "workspace:*",
     "@theaistudybible/tsconfig": "workspace:*",
-    "@types/yargs": "^17.0.32"
+    "@types/yargs": "^17.0.32",
+    "vitest": "^1.6.0"
   },
   "dependencies": {
     "@theaistudybible/core": "workspace:*",
