--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+NODE_ENV=development
+
 # Set to false if you don't want to seed the db every time (will still run on creation)
 DATABASE_SEED=true
 
