--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -36,9 +36,11 @@
   },
   "dependencies": {
     "@clerk/themes": "^2.1.8",
+    "@hono/clerk-auth": "^2.0.0",
+    "@hono/sentry": "^1.1.0",
+    "@hono/zod-validator": "^0.2.1",
     "@internationalized/date": "^3.5.4",
     "@tanstack/svelte-query": "^5.40.0",
-    "@theaistudybible/api": "workspace:*",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/langchain": "workspace:*",
     "@theaistudybible/server": "workspace:*",
