--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
   },
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.583.0",
+    "@aws-sdk/client-cloudfront": "^3.587.0",
     "@aws-sdk/client-s3": "^3.583.0",
     "@aws-sdk/client-sqs": "^3.583.0",
     "@aws-sdk/credential-providers": "^3.583.0",
+    "@aws-sdk/middleware-retry": "^3.374.0",
     "@aws-sdk/s3-request-presigner": "^3.583.0",
     "@neondatabase/api-client": "^1.8.0",
     "@neondatabase/serverless": "^0.9.3",
