--- a/package.json
+++ b/package.json
@@ -8,41 +8,41 @@
     "deploy": "sst deploy",
     "remove": "sst remove",
     "refresh": "sst refresh",
-    "db:generate": "sst shell drizzle-kit generate",
-    "db:studio": "sst shell drizzle-kit studio",
-    "scripts": "cd apps/scripts && sst shell tsx src/index.ts",
+    "db:generate": "sst shell -- drizzle-kit generate",
+    "db:studio": "sst shell -- drizzle-kit studio",
+    "scripts": "cd apps/scripts && sst shell -- tsx src/index.ts",
     "format": "pnpm run -r --parallel format",
     "lint": "pnpm run -r --parallel lint",
     "lint:fix": "pnpm run -r --parallel lint:fix",
     "typecheck": "tsc --noEmit",
     "typecheck:all": "pnpm run typecheck && pnpm run -r --parallel typecheck",
-    "update": "concurrently --names \"Dependency Update,Chromium Layer Update\" -c \"bgYellow,bgBlue\" \"pnpm update -rLf && pnpm sst upgrade && pnpm install -rf\" \"cd lambda-layers/chromium && ./build-layer.sh\" "
+    "update": "concurrently --names \"Dependency Update,Chromium Layer Update,LLRT Layer Update\" -c \"bgYellow,bgBlue,bgRed\" \"pnpm update -rLf && pnpm sst upgrade && pnpm install -rf\" \"cd lambda-layers/chromium && ./build-layer.sh\" \"cd lambda-layers/llrt && ./build-layer.sh\" "
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.138",
-    "@types/node": "^20.12.12",
+    "@types/node": "^20.12.13",
     "@types/pg": "^8.11.6",
     "concurrently": "^8.2.2",
-    "drizzle-kit": "0.21.4",
+    "drizzle-kit": "0.22.1",
     "graphql": "^16.8.1",
     "typescript": "^5.4.5",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.583.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.587.0",
     "@aws-sdk/client-cloudfront": "^3.587.0",
-    "@aws-sdk/client-s3": "^3.583.0",
-    "@aws-sdk/client-sqs": "^3.583.0",
-    "@aws-sdk/credential-providers": "^3.583.0",
+    "@aws-sdk/client-s3": "^3.587.0",
+    "@aws-sdk/client-sqs": "^3.587.0",
+    "@aws-sdk/credential-providers": "^3.587.0",
     "@aws-sdk/middleware-retry": "^3.374.0",
-    "@aws-sdk/s3-request-presigner": "^3.583.0",
+    "@aws-sdk/s3-request-presigner": "^3.587.0",
     "@neondatabase/api-client": "^1.8.0",
     "@neondatabase/serverless": "^0.9.3",
     "@pulumi/pulumi": "^3.117.0",
     "@upstash/pulumi": "^0.2.0",
     "@upstash/vector": "^1.1.1",
-    "drizzle-orm": "^0.30.10",
+    "drizzle-orm": "^0.31.0",
     "drizzle-zod": "^0.5.1",
     "pg": "^8.11.5",
     "sst": "^3.0.32",
