--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -14,9 +14,9 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@sveltejs/adapter-auto": "^3.2.1",
+    "@sveltejs/kit": "^2.5.10",
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/eslint-plugin-query": "^5.35.6",
     "@theaistudybible/eslint-config": "workspace:*",
@@ -24,15 +24,15 @@
     "@theaistudybible/tsconfig": "workspace:*",
     "autoprefixer": "^10.4.19",
     "eslint-plugin-svelte": "^2.39.0",
-    "globals": "^15.0.0",
+    "globals": "^15.3.0",
     "postcss": "^8.4.38",
-    "svelte": "^5.0.0-next.1",
-    "svelte-check": "^3.6.0",
+    "svelte": "5.0.0-next.147",
+    "svelte-check": "^3.8.0",
     "svelte-loading-spinners": "^0.3.6",
     "tailwindcss": "^3.4.3",
-    "tslib": "^2.4.1",
-    "vite": "^5.0.3",
-    "vitest": "^1.2.0"
+    "tslib": "^2.6.2",
+    "vite": "^5.2.12",
+    "vitest": "^1.6.0"
   },
   "dependencies": {
     "@clerk/themes": "^2.1.8",
@@ -50,7 +50,8 @@
     "cmdk-sv": "^0.0.17",
     "embla-carousel-svelte": "^8.1.3",
     "formsnap": "^1.0.0",
-    "hono": "^4.4.0",
+    "hono": "^4.4.2",
+    "iso-639-1": "^3.1.2",
     "lucide-svelte": "^0.381.0",
     "mode-watcher": "^0.3.0",
     "paneforge": "^0.0.4",
