--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -16,6 +16,6 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-sonarjs": "^1.0.3",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^8.0.0-alpha.23"
+    "typescript-eslint": "8.0.0-alpha.24"
   }
 }
