--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -7,7 +7,7 @@
   "devDependencies": {
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
-    "prettier-plugin-tailwindcss": "^0.5.14",
-    "prettier-plugin-svelte": "^3.2.3"
+    "prettier-plugin-svelte": "^3.2.3",
+    "prettier-plugin-tailwindcss": "^0.6.0"
   }
 }
