--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -33,6 +33,7 @@
     "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
     "vite": "^5.2.12",
+    "vite-plugin-cjs-interop": "^2.1.0",
     "vitest": "^1.6.0"
   },
   "dependencies": {
