--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -24,6 +24,7 @@
     "tslib": "^2.6.2",
     "vite": "^5.2.12",
     "vite-plugin-cjs-interop": "^2.1.0",
+    "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
   },
   "dependencies": {
@@ -33,23 +34,23 @@
     "@corvu/drawer": "^0.2.1",
     "@hono/clerk-auth": "^2.0.0",
     "@hono/sentry": "^1.1.0",
-    "@hono/zod-validator": "^0.2.1",
+    "@hono/zod-validator": "^0.2.2",
     "@internationalized/date": "^3.5.4",
-    "@kobalte/core": "^0.13.2",
+    "@kobalte/core": "^0.13.3",
     "@solidjs/router": "^0.13.5",
     "@solidjs/start": "^1.0.1",
-    "@tanstack/solid-query": "^5.40.0",
+    "@tanstack/solid-query": "^5.40.1",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/langchain": "workspace:*",
     "@theaistudybible/server": "workspace:*",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk-solid": "^1.0.1",
-    "hono": "^4.4.2",
+    "hono": "^4.4.3",
     "iso-639-1": "^3.1.2",
     "lucide-solid": "^0.383.0",
     "solid-js": "^1.8.17",
-    "sst": "^3.0.32",
+    "sst": "ion",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7",
