--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -16,36 +16,36 @@
     "@theaistudybible/tsconfig": "workspace:*",
     "@types/aws-lambda": "^8.10.138",
     "@types/busboy": "^1.5.4",
-    "@types/node": "^20.12.13",
+    "@types/node": "^20.14.1",
     "@types/nodemailer": "^6.4.15",
     "vitest": "^1.6.0"
   },
   "dependencies": {
     "@clerk/clerk-sdk-node": "^5.0.9",
     "@clerk/types": "^4.5.1",
-    "@middy/core": "^5.3.5",
-    "@middy/error-logger": "^5.3.5",
-    "@middy/http-cors": "^5.3.5",
-    "@middy/http-error-handler": "^5.3.5",
+    "@middy/core": "^5.4.0",
+    "@middy/error-logger": "^5.4.0",
+    "@middy/http-cors": "^5.4.0",
+    "@middy/http-error-handler": "^5.4.0",
     "@sentry/node": "^7",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/langchain": "workspace:*",
     "@theaistudybible/server": "workspace:*",
     "@upstash/ratelimit": "^1.1.3",
     "@upstash/redis": "^1.31.3",
-    "ai": "^3.1.22",
+    "ai": "^3.1.25",
     "busboy": "^1.6.0",
     "escape-string-regexp": "^5.0.0",
     "fast-xml-parser": "^4.4.0",
     "firebase-admin": "^12.1.1",
     "mammoth": "^1.7.2",
     "nodemailer": "^6.9.13",
-    "openai": "^4.47.2",
+    "openai": "^4.47.3",
     "pdf-parse": "^1.1.1",
     "pug": "^3.0.3",
     "puppeteer-core": "^22.10.0",
-    "sst": "^3.0.32",
-    "stripe": "^15.8.0",
+    "sst": "ion",
+    "stripe": "^15.9.0",
     "svix": "^1.24.0",
     "uuid": "^9.0.1",
     "validator": "^13.12.0",
