--- a/apps/scripts/package.json
+++ b/apps/scripts/package.json
@@ -17,7 +17,7 @@
     "@theaistudybible/prettier-config": "workspace:*",
     "@theaistudybible/tsconfig": "workspace:*",
     "@types/yargs": "^17.0.32",
-    "tsx": "^4.11.0",
+    "tsx": "^4.11.2",
     "vitest": "^1.6.0"
   },
   "dependencies": {
@@ -26,7 +26,7 @@
     "@theaistudybible/server": "workspace:*",
     "dotenv": "^16.4.5",
     "ora": "^8.0.1",
-    "sst": "^3.0.32",
+    "sst": "ion",
     "yargs": "^17.7.2"
   }
 }
