--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,15 +13,15 @@
     "@theaistudybible/eslint-config": "workspace:*",
     "@theaistudybible/prettier-config": "workspace:*",
     "@theaistudybible/tsconfig": "workspace:*",
-    "@types/node": "^20.12.13",
+    "@types/node": "^20.14.1",
     "@types/validator": "^13.11.10",
     "vitest": "^1.6.0"
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
-    "ai": "^3.1.22",
+    "ai": "^3.1.25",
     "axios": "^1.7.2",
-    "axios-retry": "^4.3.0",
-    "sst": "^3.0.32"
+    "axios-retry": "^4.4.0",
+    "sst": "ion"
   }
 }
