--- a/packages/langchain/package.json
+++ b/packages/langchain/package.json
@@ -18,13 +18,13 @@
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@langchain/anthropic": "^0.1.21",
-    "@langchain/community": "^0.2.4",
+    "@langchain/anthropic": "^0.2.0",
+    "@langchain/community": "^0.2.5",
     "@langchain/core": "^0.2.5",
-    "@langchain/openai": "^0.1.0",
+    "@langchain/openai": "^0.1.1",
     "@theaistudybible/core": "workspace:*",
     "langchain": "^0.2.4",
-    "sst": "^3.0.32",
+    "sst": "ion",
     "youtube-transcript": "^1.2.1",
     "youtubei.js": "^9.4.0"
   }
