--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,7 +16,7 @@
     "@theaistudybible/tsconfig": "workspace:*",
     "@types/aws-lambda": "^8.10.138",
     "@types/busboy": "^1.5.4",
-    "@types/node": "^20.12.13",
+    "@types/node": "^20.14.1",
     "@types/nodemailer": "^6.4.15",
     "@types/ws": "^8.5.10",
     "vitest": "^1.6.0"
@@ -25,7 +25,7 @@
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/langchain": "workspace:*",
     "@upstash/redis": "^1.31.3",
-    "ai": "^3.1.22",
+    "ai": "^3.1.25",
     "argon2": "^0.40.3",
     "busboy": "^1.6.0",
     "escape-string-regexp": "^5.0.0",
@@ -33,12 +33,12 @@
     "firebase-admin": "^12.1.1",
     "lambda-stream": "^0.5.0",
     "mammoth": "^1.7.2",
-    "openai": "^4.47.2",
+    "openai": "^4.47.3",
     "pdf-parse": "^1.1.1",
     "pug": "^3.0.3",
     "puppeteer-core": "^22.10.0",
-    "sst": "^3.0.32",
-    "stripe": "^15.8.0",
+    "sst": "ion",
+    "stripe": "^15.9.0",
     "uuid": "^9.0.1",
     "validator": "^13.12.0",
     "web-streams-polyfill": "^4.0.0",
