--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -21,12 +21,13 @@
     "vitest": "^1.6.0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.588.0",
     "@clerk/clerk-sdk-node": "^5.0.9",
     "@clerk/types": "^4.5.1",
+    "@langchain/community": "^0.2.5",
+    "@langchain/core": "^0.2.5",
     "@middy/core": "^5.4.0",
-    "@middy/error-logger": "^5.4.0",
-    "@middy/http-cors": "^5.4.0",
-    "@middy/http-error-handler": "^5.4.0",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@sentry/node": "^7",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/langchain": "workspace:*",
@@ -34,22 +35,13 @@
     "@upstash/ratelimit": "^1.1.3",
     "@upstash/redis": "^1.31.3",
     "ai": "^3.1.25",
-    "busboy": "^1.6.0",
-    "escape-string-regexp": "^5.0.0",
+    "drizzle-orm": "^0.31.1",
     "fast-xml-parser": "^4.4.0",
     "firebase-admin": "^12.1.1",
+    "langchain": "^0.2.4",
     "mammoth": "^1.7.2",
-    "nodemailer": "^6.9.13",
     "openai": "^4.47.3",
     "pdf-parse": "^1.1.1",
-    "pug": "^3.0.3",
-    "puppeteer-core": "^22.10.0",
-    "sst": "ion",
-    "stripe": "^15.9.0",
-    "svix": "^1.24.0",
-    "uuid": "^9.0.1",
-    "validator": "^13.12.0",
-    "web-streams-polyfill": "^4.0.0",
-    "zlib": "^1.0.5"
+    "sst": "ion"
   }
 }
