--- a/apps/scripts/package.json
+++ b/apps/scripts/package.json
@@ -18,15 +18,25 @@
     "@theaistudybible/tsconfig": "workspace:*",
     "@types/yargs": "^17.0.32",
     "tsx": "^4.11.2",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.0",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.0.9",
+    "@neondatabase/serverless": "^0.9.3",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/langchain": "workspace:*",
     "@theaistudybible/server": "workspace:*",
+    "@xmldom/xmldom": "^0.8.10",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.31.1",
+    "fast-xml-parser": "^4.4.0",
+    "jszip": "^3.10.1",
     "ora": "^8.0.1",
+    "pg": "^8.12.0",
     "sst": "ion",
-    "yargs": "^17.7.2"
+    "yargs": "^17.7.2",
+    "zod": "^3.23.8"
   }
 }
