--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,5 +1,7 @@
 {
-  "name": "example-bare",
+  "name": "@theaistudybible/website",
+  "version": "1.0.0",
+  "description": "The AI Study Bible Website",
   "type": "module",
   "scripts": {
     "dev": "sst dev vinxi dev",
@@ -12,17 +14,15 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.13",
+    "@clerk/types": "^4.5.1",
     "@tanstack/eslint-plugin-query": "^5.35.6",
     "@theaistudybible/eslint-config": "workspace:*",
     "@theaistudybible/prettier-config": "workspace:*",
     "@theaistudybible/tsconfig": "workspace:*",
     "autoprefixer": "^10.4.19",
-    "globals": "^15.3.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "tslib": "^2.6.2",
-    "vite": "^5.2.12",
+    "vinxi": "^0.3.11",
     "vite-plugin-cjs-interop": "^2.1.0",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
@@ -32,35 +32,34 @@
     "@clerk/clerk-sdk-node": "^5.0.9",
     "@clerk/themes": "^2.1.8",
     "@corvu/drawer": "^0.2.1",
-    "@hono/clerk-auth": "^2.0.0",
-    "@hono/sentry": "^1.1.0",
-    "@hono/zod-validator": "^0.2.2",
     "@internationalized/date": "^3.5.4",
     "@kobalte/core": "^0.13.3",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@solidjs/router": "^0.13.5",
     "@solidjs/start": "^1.0.1",
     "@tanstack/solid-query": "^5.40.1",
+    "@theaistudybible/api": "workspace:*",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/langchain": "workspace:*",
     "@theaistudybible/server": "workspace:*",
+    "@upstash/redis": "^1.31.3",
+    "ai": "^3.1.25",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk-solid": "^1.0.1",
+    "drizzle-orm": "^0.31.1",
     "hono": "^4.4.3",
     "iso-639-1": "^3.1.2",
     "lucide-solid": "^0.383.0",
     "solid-js": "^1.8.17",
     "sst": "ion",
+    "stripe": "^15.9.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "vinxi": "^0.3.11",
     "zod": "^3.23.8"
   },
   "engines": {
-    "node": ">=18"
-  },
-  "overrides": {
-    "nitropack": "npm:nitropack-nightly@latest"
+    "node": ">=20"
   }
 }
