--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "Bundler",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "jsx": "preserve",
@@ -20,11 +20,13 @@
       "@theaistudybible/langchain/*": ["../../packages/langchain/src/*"],
       "@theaistudybible/server": ["../../packages/server/src"],
       "@theaistudybible/server/*": ["../../packages/server/src/*"],
+      "@theaistudybible/api": ["../api/src"],
+      "@theaistudybible/api/*": ["../api/src/*"],
       "@lib/server/database": ["./src/lib/server/database"],
       "@lib/server/cache": ["./src/lib/server/cache"],
       "~/*": ["./src/*"]
     }
   },
-  "include": ["./src/**/*", "../../packages/core/globals.d.ts"],
+  "include": ["./src", "../../packages/core/globals.d.ts"],
   "exclude": ["node_modules", "dist", ".output", ".vinxi"]
 }
