--- a/package.json
+++ b/package.json
@@ -21,34 +21,25 @@
   "devDependencies": {
     "@types/aws-lambda": "8.10.138",
     "@types/node": "^20.14.1",
-    "@types/pg": "^8.11.6",
     "concurrently": "^8.2.2",
     "drizzle-kit": "0.22.2",
-    "graphql": "^16.8.1",
     "typescript": "^5.4.5",
-    "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.588.0",
-    "@aws-sdk/client-cloudfront": "^3.588.0",
-    "@aws-sdk/client-s3": "^3.588.0",
-    "@aws-sdk/client-sqs": "^3.588.0",
-    "@aws-sdk/credential-providers": "^3.588.0",
-    "@aws-sdk/middleware-retry": "^3.374.0",
-    "@aws-sdk/s3-request-presigner": "^3.588.0",
     "@neondatabase/api-client": "^1.8.0",
-    "@neondatabase/serverless": "^0.9.3",
     "@pulumi/pulumi": "^3.118.0",
     "@upstash/pulumi": "^0.2.0",
     "@upstash/vector": "^1.1.2",
-    "drizzle-orm": "^0.31.0",
-    "drizzle-zod": "^0.5.1",
-    "pg": "^8.11.5",
-    "sst": "ion",
-    "zod": "^3.23.8"
+    "sst": "ion"
   },
   "workspaces": [
+    "apps/*",
     "packages/*"
+  ],
+  "trustedDependencies": [
+    "@clerk/shared",
+    "@upstash/pulumi",
+    "protobufjs"
   ]
 }
