--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,6 +14,7 @@
     "@theaistudybible/prettier-config": "workspace:*",
     "@theaistudybible/tsconfig": "workspace:*",
     "@types/node": "^20.14.1",
+    "@types/nodemailer": "^6.4.15",
     "@types/validator": "^13.11.10",
     "vitest": "^1.6.0"
   },
@@ -22,6 +23,8 @@
     "ai": "^3.1.25",
     "axios": "^1.7.2",
     "axios-retry": "^4.4.0",
+    "drizzle-orm": "^0.31.1",
+    "nodemailer": "^6.9.13",
     "sst": "ion"
   }
 }
