--- a/packages/prettier-config/.prettierrc.json
+++ b/packages/prettier-config/.prettierrc.json
@@ -6,15 +6,6 @@
   "printWidth": 100,
   "plugins": [
     "prettier-plugin-organize-imports",
-    "prettier-plugin-tailwindcss",
-    "prettier-plugin-svelte"
-  ],
-  "overrides": [
-    {
-      "files": "*.svelte",
-      "options": {
-        "parser": "svelte"
-      }
-    }
+    "prettier-plugin-tailwindcss"
   ]
 }
