--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@theaistudybible/tsconfig",
   "compilerOptions": {
+    "verbatimModuleSyntax": false,
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Bundler",
