--- a/.env.example
+++ b/.env.example
@@ -29,13 +29,13 @@ ADMIN_EMAIL=admin@theaistudybible.com
 ADMIN_PASSWORD=
 
 # Clerk
-PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 CLERK_WEBHOOK_SECRET=
 
 # Stripe
-PUBLIC_STRIPE_PUBLIC_KEY=
-STRIPE_API_KEY=
+STRIPE_PUBLIC_KEY=
+STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
 
 # Upstash
