--- a/apps/scripts/package.json
+++ b/apps/scripts/package.json
@@ -10,14 +10,13 @@
     "lint:fix": "prettier --write . && eslint .",
     "format": "prettier --write .",
     "test": "vitest run",
-    "scripts": "sst shell -- tsx src/index.ts"
+    "scripts": "sst shell -- bun run src/index.ts"
   },
   "devDependencies": {
     "@theaistudybible/eslint-config": "workspace:*",
     "@theaistudybible/prettier-config": "workspace:*",
     "@theaistudybible/tsconfig": "workspace:*",
     "@types/yargs": "^17.0.32",
-    "tsx": "^4.11.2",
     "vitest": "^1.6.0",
     "vite-tsconfig-paths": "^4.3.2"
   },
