--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.138",
-    "@types/node": "^20.14.1",
+    "@types/node": "^20.14.2",
     "concurrently": "^8.2.2",
-    "drizzle-kit": "0.22.2",
+    "drizzle-kit": "^0.22.2",
     "turbo": "^2.0.1",
     "typescript": "^5.4.5",
     "vitest": "^1.6.0"
   },
   "dependencies": {
     "@neondatabase/api-client": "^1.8.0",
-    "@pulumi/pulumi": "^3.118.0",
+    "@pulumi/pulumi": "^3.119.0",
     "@upstash/pulumi": "^0.2.0",
     "@upstash/vector": "^1.1.2",
     "sst": "ion"
