--- a/packages/langchain/package.json
+++ b/packages/langchain/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.577.0",
-    "@clerk/types": "^4.5.1",
+    "@clerk/types": "^4.6.0",
     "@sparticuz/chromium": "^123.0.1",
     "@theaistudybible/eslint-config": "workspace:*",
     "@theaistudybible/prettier-config": "workspace:*",
@@ -20,19 +20,19 @@
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.588.0",
-    "@langchain/anthropic": "^0.2.0",
-    "@langchain/community": "^0.2.5",
-    "@langchain/core": "^0.2.5",
-    "@langchain/openai": "^0.1.1",
+    "@aws-sdk/client-bedrock-runtime": "^3.592.0",
+    "@langchain/anthropic": "^0.2.1",
+    "@langchain/community": "^0.2.7",
+    "@langchain/core": "^0.2.6",
+    "@langchain/openai": "^0.1.2",
     "@neondatabase/serverless": "^0.9.3",
     "@paralleldrive/cuid2": "^2.2.2",
     "@theaistudybible/core": "workspace:*",
     "@types/ws": "^8.5.10",
     "fast-xml-parser": "^4.4.0",
-    "langchain": "^0.2.4",
+    "langchain": "^0.2.5",
     "puppeteer-core": "^22.10.0",
-    "sst": "ion",
+    "sst": "^3.0.32",
     "ws": "^8.17.0",
     "youtube-transcript": "^1.2.1",
     "youtubei.js": "^9.4.0",
