--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -16,32 +16,32 @@
     "@theaistudybible/tsconfig": "workspace:*",
     "@types/aws-lambda": "^8.10.138",
     "@types/busboy": "^1.5.4",
-    "@types/node": "^20.14.1",
+    "@types/node": "^20.14.2",
     "@types/nodemailer": "^6.4.15",
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.588.0",
-    "@clerk/clerk-sdk-node": "^5.0.9",
-    "@clerk/types": "^4.5.1",
-    "@langchain/community": "^0.2.5",
-    "@langchain/core": "^0.2.5",
+    "@aws-sdk/client-s3": "^3.592.0",
+    "@clerk/clerk-sdk-node": "^5.0.10",
+    "@clerk/types": "^4.6.0",
+    "@langchain/community": "^0.2.7",
+    "@langchain/core": "^0.2.6",
     "@middy/core": "^5.4.0",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@sentry/node": "^7",
+    "@sentry/node": "^8.7.0",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/langchain": "workspace:*",
     "@theaistudybible/server": "workspace:*",
     "@upstash/ratelimit": "^1.1.3",
     "@upstash/redis": "^1.31.3",
-    "ai": "^3.1.25",
+    "ai": "^3.1.30",
     "drizzle-orm": "^0.31.1",
     "fast-xml-parser": "^4.4.0",
     "firebase-admin": "^12.1.1",
-    "langchain": "^0.2.4",
+    "langchain": "^0.2.5",
     "mammoth": "^1.7.2",
-    "openai": "^4.47.3",
+    "openai": "^4.48.3",
     "pdf-parse": "^1.1.1",
-    "sst": "ion"
+    "sst": "^3.0.32"
   }
 }
