--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -14,53 +14,61 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@clerk/types": "^4.5.1",
+    "@clerk/types": "^4.6.0",
     "@tanstack/eslint-plugin-query": "^5.35.6",
     "@theaistudybible/eslint-config": "workspace:*",
     "@theaistudybible/prettier-config": "workspace:*",
     "@theaistudybible/tsconfig": "workspace:*",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "vinxi": "^0.3.11",
-    "vite-plugin-cjs-interop": "^2.1.0",
+    "vite-plugin-cjs-interop": "^2.1.1",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@clerk/clerk-js": "^5.5.3",
-    "@clerk/clerk-sdk-node": "^5.0.9",
-    "@clerk/themes": "^2.1.8",
+    "@aws-sdk/client-s3": "^3.592.0",
+    "@aws-sdk/s3-request-presigner": "^3.592.0",
+    "@clerk/clerk-js": "^5.6.0",
+    "@clerk/clerk-sdk-node": "^5.0.10",
+    "@clerk/themes": "^2.1.9",
     "@corvu/drawer": "^0.2.1",
+    "@hono/clerk-auth": "^2.0.0",
+    "@hono/sentry": "^1.1.0",
+    "@hono/zod-validator": "^0.2.2",
     "@internationalized/date": "^3.5.4",
     "@kobalte/core": "^0.13.3",
     "@paralleldrive/cuid2": "^2.2.2",
     "@solidjs/router": "^0.13.5",
-    "@solidjs/start": "^1.0.0",
+    "@solidjs/start": "^1.0.1",
     "@tanstack/solid-query": "^5.40.1",
     "@tanstack/solid-query-devtools": "^5.40.1",
-    "@theaistudybible/api": "workspace:*",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/langchain": "workspace:*",
     "@theaistudybible/server": "workspace:*",
     "@upstash/redis": "^1.31.3",
-    "ai": "^3.1.25",
+    "ai": "^3.1.30",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk-solid": "^1.0.1",
     "drizzle-orm": "^0.31.1",
-    "hono": "^4.4.3",
+    "drizzle-zod": "^0.5.1",
+    "hono": "^4.4.4",
     "iso-639-1": "^3.1.2",
-    "lucide-solid": "^0.383.0",
+    "lucide-solid": "^0.390.0",
     "solid-js": "^1.8.17",
-    "sst": "ion",
-    "stripe": "^15.9.0",
+    "solid-marked": "^0.6.3",
+    "sst": "^3.0.32",
+    "stripe": "^15.10.0",
+    "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "vitest": "^1.6.0",
     "zod": "^3.23.8"
   },
   "engines": {
-    "node": ">=20"
+    "node": ">=18"
   }
 }
