--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,26 +10,26 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@clerk/types": "^4.5.1",
+    "@clerk/types": "^4.6.0",
     "@sparticuz/chromium": "^123.0.1",
     "@theaistudybible/eslint-config": "workspace:*",
     "@theaistudybible/prettier-config": "workspace:*",
     "@theaistudybible/tsconfig": "workspace:*",
     "@types/aws-lambda": "^8.10.138",
     "@types/busboy": "^1.5.4",
-    "@types/node": "^20.14.1",
+    "@types/node": "^20.14.2",
     "@types/nodemailer": "^6.4.15",
     "@types/ws": "^8.5.10",
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.588.0",
-    "@aws-sdk/client-s3": "^3.588.0",
-    "@aws-sdk/client-sqs": "^3.588.0",
-    "@aws-sdk/s3-request-presigner": "^3.588.0",
-    "@clerk/clerk-sdk-node": "^5.0.9",
-    "@langchain/community": "^0.2.5",
-    "@langchain/core": "^0.2.5",
+    "@aws-sdk/client-bedrock-runtime": "^3.592.0",
+    "@aws-sdk/client-s3": "^3.592.0",
+    "@aws-sdk/client-sqs": "^3.592.0",
+    "@aws-sdk/s3-request-presigner": "^3.592.0",
+    "@clerk/clerk-sdk-node": "^5.0.10",
+    "@langchain/community": "^0.2.7",
+    "@langchain/core": "^0.2.6",
     "@neondatabase/serverless": "^0.9.3",
     "@paralleldrive/cuid2": "^2.2.2",
     "@theaistudybible/core": "workspace:*",
@@ -39,10 +39,10 @@
     "escape-string-regexp": "^5.0.0",
     "fast-xml-parser": "^4.4.0",
     "firebase-admin": "^12.1.1",
-    "langchain": "^0.2.4",
+    "langchain": "^0.2.5",
     "mammoth": "^1.7.2",
     "pdf-parse": "^1.1.1",
-    "sst": "ion",
+    "sst": "^3.0.32",
     "ws": "^8.17.0"
   }
 }
