Bible reader pretty much solidified

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,11 +24,12 @@
     "Mixtral",
     "NKJV",
     "openai",
-    "theaistudybible",
+    "Ratelimit",
     "REVENUECAT",
     "Riverpod",
     "tada",
     "tailwindcss",
+    "theaistudybible",
     "togetherai",
     "unfocus",
     "upstash"
@@ -37,9 +38,8 @@
     "packages/core",
     "packages/langchain",
     "packages/server",
-    "apps/api",
     "apps/scripts",
-    "apps/website",
+    "apps/web",
     "apps/functions"
   ],
   "eslint.lintTask.enable": true,
