--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,12 +15,13 @@
   },
   "devDependencies": {
     "@clerk/types": "^4.6.0",
-    "@tanstack/eslint-plugin-query": "^5.35.6",
+    "@tanstack/eslint-plugin-query": "^5.43.1",
     "@theaistudybible/eslint-config": "workspace:*",
     "@theaistudybible/prettier-config": "workspace:*",
     "@theaistudybible/tsconfig": "workspace:*",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
+    "solid-devtools": "^0.30.1",
     "tailwindcss": "^3.4.4",
     "vinxi": "^0.3.11",
     "vite-plugin-cjs-interop": "^2.1.1",
@@ -28,6 +29,8 @@
     "vitest": "^1.6.0"
   },
   "dependencies": {
+    "@ai-sdk/solid": "^0.0.1",
+    "@ark-ui/solid": "^3.2.2",
     "@aws-sdk/client-s3": "^3.592.0",
     "@aws-sdk/s3-request-presigner": "^3.592.0",
     "@clerk/clerk-js": "^5.6.0",
@@ -39,27 +42,36 @@
     "@hono/zod-validator": "^0.2.2",
     "@internationalized/date": "^3.5.4",
     "@kobalte/core": "^0.13.3",
+    "@langchain/community": "^0.2.9",
+    "@langchain/core": "^0.2.6",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@solid-primitives/resize-observer": "^2.0.25",
+    "@solid-primitives/share": "^2.0.6",
+    "@solid-primitives/storage": "^3.7.0",
+    "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.13.5",
     "@solidjs/start": "^1.0.1",
-    "@tanstack/solid-query": "^5.40.1",
-    "@tanstack/solid-query-devtools": "^5.40.1",
+    "@tanstack/solid-query": "^5.42.0",
+    "@tanstack/solid-query-devtools": "^5.42.0",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/langchain": "workspace:*",
     "@theaistudybible/server": "workspace:*",
+    "@upstash/ratelimit": "^1.2.0",
     "@upstash/redis": "^1.31.3",
-    "ai": "^3.1.30",
+    "ai": "^3.1.31",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk-solid": "^1.0.1",
-    "drizzle-orm": "^0.31.1",
+    "drizzle-orm": "^0.31.2",
     "drizzle-zod": "^0.5.1",
-    "hono": "^4.4.4",
+    "hono": "^4.4.5",
     "iso-639-1": "^3.1.2",
-    "lucide-solid": "^0.390.0",
+    "langchain": "^0.2.5",
+    "lucide-solid": "^0.394.0",
+    "simple-icons": "^12.2.0",
     "solid-js": "^1.8.17",
     "solid-marked": "^0.6.3",
-    "sst": "^3.0.32",
+    "sst": "^3.0.33",
     "stripe": "^15.10.0",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
