--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -14,6 +14,7 @@
     "noEmit": true,
     "types": ["vinxi/types/client"],
     "isolatedModules": true,
+    "baseUrl": "./",
     "paths": {
       "@theaistudybible/core": ["../../packages/core/src"],
       "@theaistudybible/core/*": ["../../packages/core/src/*"],
